tests/miniJava/neg/005890_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { System.out.println java [ 0 ] = 0 ; } }
